# dilla-microchop

./: .gitignore  README.md  microchop_desktop_app.py  microchop_requirements.txt  microchop_sampler.py
app-daw/: LLM_PROMPT.md  README.md  build_dmg.sh  microchop_desktop.spec  plugin_smoke_check.py  smoke_check.py
backups/: IMPLEMENTATION_LOG.md
backups/20260521_app_daw_prompt/: IMPLEMENTATION_LOG.md.backup
backups/20260521_public_demo_artifacts/: IMPLEMENTATION_LOG.md.backup  README.md.backup
backups/20260521_readme_release_update/: README.md.backup
backups/20260521_reference_render/: IMPLEMENTATION_LOG.md.backup  microchop_sampler.py.backup
backups/20260521_youtube_readme/: IMPLEMENTATION_LOG.md.backup  README.md.backup
demo_artifacts/: README.md
demo_artifacts/ableton_output/: main_melody_bars_8_16_microchop.wav.asd
microchop_midigen/: generate_midi_only.py  midi_composition.py  midi_config.py  midi_drum_sequences.py  midi_musical_devices.py  midi_orchestrator.py  midi_song_structure.py
plugin/melodic_microchop_plugin/: CMakeLists.txt  README.md
plugin/melodic_microchop_plugin/Source/: AnalysisEngine.cpp  AnalysisEngine.h  BackgroundAnalysisJob.cpp  BackgroundAnalysisJob.h  ChopManifest.cpp  ChopManifest.h  MicrochopVoice.cpp  MicrochopVoice.h  PlaybackTypes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEngine.cpp  SamplerEngine.h
tests/: test_output_path_safety.py
